- Adding nice large yelpish icon from Human
* data/icons/Makefile.am:
* src/yelp-toc-pager.c:
- Adding nice large yelpish icon from Human

* src/yelp-settings.c:
* src/yelp-settings.h:
* stylesheets/db2html.xsl.in:
- A nice yellow color for admonitions

* stylesheets/toc2html.xsl:
- Fixed document sorting problem

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2005-02-01  Shaun McCance  <shaunm@gnome.org>
+
+	* data/icons/Makefile.am:
+	* src/yelp-toc-pager.c:
+	- Adding nice large yelpish icon from Human
+
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	* stylesheets/db2html.xsl.in:
+	- A nice yellow color for admonitions
+
+	* stylesheets/toc2html.xsl:
+	- Fixed document sorting problem
+
 2005-01-25  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-bookmarks.c:
