--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-02  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2005-01-31  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar SMolin.
