--- a/po/ko.po
+++ b/po/ko.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.5.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2004-02-25 01:10+0900\n"
+"POT-Creation-Date: 2005-02-02 22:03+0900\n"
+"PO-Revision-Date: 2005-02-02 22:43+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr "개발"
 
 #: data/man.xml.in.h:4
 msgid "FORTRAN Functions"
-msgstr ""
+msgstr "FORTRAN 함수"
 
 #: data/man.xml.in.h:5 data/toc.xml.in.h:7
 msgid "Games"
@@ -49,36 +49,31 @@ msgstr "라이브러리 함수"
 
 #: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
-msgstr ""
+msgstr "Man 페이지"
 
 #: data/man.xml.in.h:10
-#, fuzzy
 msgid "OpenSSL Applications"
-msgstr "X 프로그램"
+msgstr "OpenSSL 프로그램"
 
 #: data/man.xml.in.h:11
-#, fuzzy
 msgid "OpenSSL Configuration"
-msgstr "설정 파일"
+msgstr "OpenSSL 설정"
 
 #: data/man.xml.in.h:12
-#, fuzzy
 msgid "OpenSSL Overviews"
-msgstr "전체"
+msgstr "OpenSSL 전체"
 
 #: data/man.xml.in.h:13
 msgid "Overviews"
 msgstr "전체"
 
 #: data/man.xml.in.h:14
-#, fuzzy
 msgid "Perl Functions"
-msgstr "라이브러리 함수"
+msgstr "Perl 함수"
 
 #: data/man.xml.in.h:15
-#, fuzzy
 msgid "Qt Functions"
-msgstr "라이브러리 함수"
+msgstr "Qt 함수"
 
 #: data/man.xml.in.h:16
 msgid "System Administration"
@@ -89,46 +84,40 @@ msgid "System Calls"
 msgstr "시스템 호출"
 
 #: data/man.xml.in.h:18
-#, fuzzy
 msgid "Termcap Applications"
-msgstr "X 프로그램"
+msgstr "Termcap 프로그램"
 
 #: data/man.xml.in.h:19
-#, fuzzy
 msgid "X11 Applications"
-msgstr "X 프로그램"
+msgstr "X11 프로그램"
 
 #: data/man.xml.in.h:20
-#, fuzzy
 msgid "X11 Configuration"
-msgstr "설정 파일"
+msgstr "X11 설정"
 
 #: data/man.xml.in.h:21
 msgid "X11 Devices"
-msgstr ""
+msgstr "X11 장치"
 
 #: data/man.xml.in.h:22
-#, fuzzy
 msgid "X11 Functions"
-msgstr "라이브러리 함수"
+msgstr "X11 함수"
 
 #: data/man.xml.in.h:23
-#, fuzzy
 msgid "X11 Games"
-msgstr "게임"
+msgstr "X11 게임"
 
 #: data/man.xml.in.h:24
-#, fuzzy
 msgid "X11 Overviews"
-msgstr "전체"
+msgstr "X11 전체"
 
 #: data/toc.xml.in.h:1
 msgid "Accessibility"
-msgstr ""
+msgstr "접근성"
 
 #: data/toc.xml.in.h:2
 msgid "Accessories"
-msgstr ""
+msgstr "보조 프로그램"
 
 #: data/toc.xml.in.h:3
 msgid "Applets"
@@ -144,52 +133,47 @@ msgstr "교육용 프로그램"
 
 #: data/toc.xml.in.h:8
 msgid "Graphics"
-msgstr ""
+msgstr "그래픽스"
 
-#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:326
-#, fuzzy
+#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:391
 msgid "Help Topics"
-msgstr "도움말 브라우저"
+msgstr "도움말 주제"
 
 #: data/toc.xml.in.h:10
-#, fuzzy
 msgid "Internet"
-msgstr "차례"
+msgstr "인터넷"
 
 #: data/toc.xml.in.h:11
 msgid "KDE"
 msgstr "KDE"
 
 #: data/toc.xml.in.h:12
-msgid "Office"
-msgstr ""
+msgid "Multimedia"
+msgstr "멀티미디어"
 
 #: data/toc.xml.in.h:13
-msgid "Other"
-msgstr ""
+msgid "Office"
+msgstr "사무용"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
-msgid "Other Documentation"
-msgstr "릴리즈 정보"
+msgid "Other"
+msgstr "기타"
 
 #: data/toc.xml.in.h:15
-msgid "Programming"
-msgstr ""
+msgid "Other Documentation"
+msgstr "기타 문서"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
+msgid "Programming"
+msgstr "프로그래밍"
+
+#: data/toc.xml.in.h:17
 msgid "Scientific"
 msgstr "과학 프로그램"
 
-#: data/toc.xml.in.h:17
-msgid "Sound &amp; Video"
-msgstr ""
-
 #: data/toc.xml.in.h:18
-#, fuzzy
 msgid "System Tools"
-msgstr "시스템 호출"
+msgstr "시스템 도구"
 
 #: data/toc.xml.in.h:19
 msgid "X Applications"
@@ -197,29 +181,27 @@ msgstr "X 프로그램"
 
 #: data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
-msgstr ""
+msgstr "<b>접근성</b>"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
-msgstr ""
+msgstr "<b>글꼴</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "책"
+msgstr "<b>북마크(_B):</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
-msgstr ""
+msgstr "<b>제목(_T):</b>"
 
 #: data/ui/yelp.glade.h:5
 msgid "Add Bookmark"
-msgstr ""
+msgstr "책갈피 더하기"
 
 #: data/ui/yelp.glade.h:6
-#, fuzzy
 msgid "Bookmarks"
-msgstr "책"
+msgstr "책갈피"
 
 #: data/ui/yelp.glade.h:7
 msgid "C_ase sensitive"
@@ -230,22 +212,20 @@ msgid "Find"
 msgstr "찾기"
 
 #: data/ui/yelp.glade.h:9
-#, fuzzy
 msgid "Open Location"
-msgstr "바치는 글"
+msgstr "위치 열기"
 
 #: data/ui/yelp.glade.h:10
-#, fuzzy
 msgid "Preferences"
-msgstr "참고문헌"
+msgstr "기본 설정"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "이름 바꾸기(_N)"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr ""
+msgstr "캐럿으로 둘러보기(_B)"
 
 #: data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -253,12 +233,11 @@ msgstr "찾기(_F): "
 
 #: data/ui/yelp.glade.h:14
 msgid "_Fixed width:"
-msgstr ""
+msgstr "고정폭(_F):"
 
 #: data/ui/yelp.glade.h:15
-#, fuzzy
 msgid "_Location:"
-msgstr "바치는 글"
+msgstr "위치(_L):"
 
 #: data/ui/yelp.glade.h:16
 msgid "_Next"
@@ -270,11 +249,11 @@ msgstr "이전(_P)"
 
 #: data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr ""
+msgstr "시스템 글꼴 사용(_U)"
 
 #: data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr ""
+msgstr "가변폭 글꼴(_V):"
 
 #: data/ui/yelp.glade.h:20
 msgid "_Wrap around"
@@ -282,35 +261,35 @@ msgstr "끝까지 가면 처음부터(_W)"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "고정폭 텍스트 글꼴"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "텍스트 글꼴"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "고정폭 텍스트에 쓸 글꼴."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "가변폭 텍스트에 쓸 글꼴."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "페이지를 볼 때 키보드로 움직이는 캐럿을 사용합니다."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "캐럿 사용"
 
 #: data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr ""
+msgstr "시스템 글꼴 사용"
 
 #: data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr ""
+msgstr "시스템의 기본 글꼴을 사용합니다."
 
 #: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2169
 msgid "Yelp"
@@ -320,67 +299,76 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp 팩토리"
 
-#: src/yelp-bookmarks.c:241 src/yelp-bookmarks.c:313
+#: src/yelp-bookmarks.c:155
+msgid "Open Bookmark in New Window"
+msgstr "새 창에서 책갈피 열기"
+
+#: src/yelp-bookmarks.c:159
+msgid "Rename Bookmark"
+msgstr "책갈피 이름 바꾸기"
+
+#: src/yelp-bookmarks.c:163
+msgid "Remove Bookmark"
+msgstr "책갈피 지우기"
+
+#: src/yelp-bookmarks.c:306 src/yelp-bookmarks.c:378
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr ""
+msgstr "이 페이지는 이름이 <b>%s</b>인 책갈피가 이미 있습니다."
 
-#: src/yelp-bookmarks.c:341
-#, fuzzy
+#: src/yelp-bookmarks.c:406
 msgid "Document Sections"
-msgstr "릴리즈 정보"
+msgstr "문서 섹션"
 
-#: src/yelp-db-pager.c:238
+#: src/yelp-db-pager.c:242
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
-msgstr ""
+msgstr "'%s' 파일을 파싱할 수 없습니다. 파일이 없거나 올바른 형식의 XML이 아닙니다."
 
-#: src/yelp-db-pager.c:486
-msgid "Unknown"
-msgstr "알 수 없음"
+#: src/yelp-db-pager.c:489
+msgid "Unknown Section"
+msgstr "알 수 없는 섹션"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
-msgstr ""
+msgstr "알 수 없는 오류가 발생했습니다"
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "문서를 읽어들일 수 없습니다"
 
 #: src/yelp-error.c:48
-#, fuzzy
 msgid "Could not load section"
-msgstr "새 창을 열 수 없습니다."
+msgstr "섹션을 읽어들일 수 없습니다"
 
 #: src/yelp-error.c:50
-#, fuzzy
 msgid "Could not read the table of contents"
-msgstr "'%s' OMF 파일을 읽어들일 수 없습니다."
+msgstr "차례를 읽을 수 없습니다"
 
 #: src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "이 형식을 지원하지 않습니다"
 
 #: src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "문서를 읽을 수 없습니다"
 
 #: src/yelp-error.c:56
 msgid "Could not process document"
-msgstr ""
+msgstr "문서를 처리할 수 없습니다"
 
 #: src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr ""
+msgstr "오류에 관한 정보가 없습니다."
 
 #: src/yelp-io-channel.c:98
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read and decoded. The file may be compressed in "
 "an unsupported format."
-msgstr ""
+msgstr "'%s' 파일을 읽고 디코딩할 수 없습니다. 파일이 지원하지 않는 형식으로 압축되었을 것입니다."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -404,16 +392,15 @@ msgstr "도움말"
 msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
-msgstr ""
+msgstr "'%s' 파일을 분석할 수 없습니다.  파일이 없거나 파일 형식이 틀렸을 것입니다."
 
 #: src/yelp-pager.c:120
-#, fuzzy
 msgid "Document Information"
-msgstr "릴리즈 정보"
+msgstr "문서 정보"
 
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
-msgstr ""
+msgstr "문서의 YelpDocInfo 구조"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -436,9 +423,9 @@ msgstr ""
 #. single quotes as your primary (outer) quotation marks, you should
 #. just use the corresponding double quote watermark.
 #.
-#: src/yelp-settings.c:151
+#: src/yelp-settings.c:153
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201C"
 
 #: src/yelp-toc-pager.c:268
 msgid "YelpTocPager: Pause count is negative."
@@ -452,21 +439,21 @@ msgstr "'%s' OMF 파일을 읽어들일 수 없습니다."
 #: src/yelp-toc-pager.c:680
 #, c-format
 msgid "Read man page for %s"
-msgstr ""
+msgstr "%s에 관한 man 페이지를 읽습니다"
 
 #: src/yelp-toc-pager.c:765
 #, c-format
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
-msgstr ""
+msgstr "차례를 읽어들일 수 없습니다. '%s' 파일이 없거나 올바른 형식의 XML이 아닙니다."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
-msgstr ""
+msgstr "차례를 처리할 수 없습니다. '%s' 파일이 없거나 올바른 XSLT 스타일시트가 아닙니다."
 
 #: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
@@ -481,84 +468,72 @@ msgid "Help Contents"
 msgstr "도움말 차례"
 
 #: src/yelp-window.c:302
-#, fuzzy
 msgid "_File"
-msgstr "/파일(_F)"
+msgstr "파일(_F)"
 
 #: src/yelp-window.c:303
-#, fuzzy
 msgid "_Edit"
-msgstr "/편집(_E)"
+msgstr "편집(_E)"
 
 #: src/yelp-window.c:304
-#, fuzzy
 msgid "_Go"
-msgstr "/이동(_G)"
+msgstr "이동(_G)"
 
 #: src/yelp-window.c:305
 msgid "_Bookmarks"
-msgstr ""
+msgstr "책갈피(_B)"
 
 #: src/yelp-window.c:306
-#, fuzzy
 msgid "_Help"
-msgstr "/도움말(_H)"
+msgstr "도움말(_H)"
 
 #: src/yelp-window.c:309
-#, fuzzy
 msgid "_New Window"
-msgstr "/파일(F)/새 창(_N)"
+msgstr "새 창(_N)"
 
 #: src/yelp-window.c:314
-#, fuzzy
 msgid "About This Document"
-msgstr "이 전집에 대한 정보"
+msgstr "이 문서 정보"
 
 #: src/yelp-window.c:319
 msgid "Open _Location"
-msgstr ""
+msgstr "위치 열기(_L)"
 
 #: src/yelp-window.c:324
-#, fuzzy
 msgid "_Close Window"
-msgstr "/파일(F)/창 닫기(_C)"
+msgstr "창 닫기(_C)"
 
 #: src/yelp-window.c:330
 msgid "_Copy"
-msgstr ""
+msgstr "복사(_C)"
 
 #: src/yelp-window.c:336
-#, fuzzy
 msgid "_Select All"
-msgstr "살펴볼 다른 내용"
+msgstr "전부 선택(_S)"
 
 #: src/yelp-window.c:341
-#, fuzzy
 msgid "_Find..."
-msgstr "/편집(E)/찾기(_F)..."
+msgstr "찾기(_F)..."
 
 #: src/yelp-window.c:346
-#, fuzzy
 msgid "_Preferences"
-msgstr "참고문헌"
+msgstr "기본 설정(_P)"
 
 #: src/yelp-window.c:351
 msgid "_Reload"
-msgstr ""
+msgstr "다시 읽기(_R)"
 
 #: src/yelp-window.c:357
-#, fuzzy
 msgid "_Back"
-msgstr "뒤로"
+msgstr "뒤로(_B)"
 
 #: src/yelp-window.c:359
 msgid "Show previous page in history"
 msgstr "방문 기록의 이전 페이지를 봅니다"
 
 #: src/yelp-window.c:362
-#, fuzzy
 msgid "_Forward"
-msgstr "앞으로"
+msgstr "앞으로(_F)"
 
 #: src/yelp-window.c:364
 msgid "Show next page in history"
@@ -566,51 +541,47 @@ msgstr "방문 기록의 다음 페이지를 봅니다"
 
 #: src/yelp-window.c:367
 msgid "_Help Topics"
-msgstr ""
+msgstr "도움말 주제(_H)"
 
 #: src/yelp-window.c:369
 msgid "Go to the listing of help topics"
-msgstr ""
+msgstr "도움말 주제 목록으로 갑니다"
 
 #: src/yelp-window.c:372
-#, fuzzy
 msgid "_Previous Section"
-msgstr "/이동(G)/이전 페이지(_P)"
+msgstr "이전 섹션(_P)"
 
 #: src/yelp-window.c:377
-#, fuzzy
 msgid "_Next Section"
-msgstr "절"
+msgstr "다음 섹션(_N)"
 
 #: src/yelp-window.c:382
-#, fuzzy
 msgid "_Contents"
-msgstr "차례"
+msgstr "차례(_C)"
 
 #: src/yelp-window.c:388
 msgid "_Add Bookmark"
-msgstr ""
+msgstr "책갈피 더하기(_A)"
 
 #: src/yelp-window.c:393
 msgid "_Edit Bookmarks..."
-msgstr ""
+msgstr "책갈피 편집(_E)..."
 
 #: src/yelp-window.c:399
 msgid "_Open Link"
-msgstr ""
+msgstr "바로 가기 열기(_O)"
 
 #: src/yelp-window.c:404
 msgid "Open Link in _New Window"
-msgstr ""
+msgstr "바로 가기 새 창에서 열기(_N)"
 
 #: src/yelp-window.c:409
 msgid "_Copy Link Address"
-msgstr ""
+msgstr "바로 가기 주소 복사(_C)"
 
 #: src/yelp-window.c:415
-#, fuzzy
 msgid "_About"
-msgstr "/도움말(H)/정보(_A)"
+msgstr "정보(_A)"
 
 #: src/yelp-window.c:466
 msgid "Help Browser"
@@ -618,50 +589,47 @@ msgstr "도움말 브라우저"
 
 #: src/yelp-window.c:697 src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "파일에 대한 URI가 잘못되었습니다."
 
 #: src/yelp-window.c:709 src/yelp-window.c:825
 #, c-format
 msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
-msgstr ""
+msgstr "'%s' URI가 잘못되었거나 실제 파일을 가리키는 URI가 아닙니다."
 
 #: src/yelp-window.c:786 src/yelp-window.c:1140
 msgid "Man pages are not supported in this version."
-msgstr ""
+msgstr "이 버전은 Man 페이지를 지원하지 않습니다."
 
 #: src/yelp-window.c:796 src/yelp-window.c:1131
 msgid "GNU info pages are not supported in this version"
-msgstr ""
+msgstr "이 버전은 GNU info 페이지를 지원하지 않습니다"
 
 #: src/yelp-window.c:806
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
-msgstr ""
+msgstr "SGML 문서는 더 이상 지원하지 않습니다. 문서 작성자에게 XML로 변환하라고 요청하십시오."
 
 #: src/yelp-window.c:1024
-#, fuzzy
 msgid "Find:"
-msgstr "찾기"
+msgstr "찾기:"
 
 #: src/yelp-window.c:1040
-#, fuzzy
 msgid "Find _Next"
-msgstr "/편집(E)/다음 찾기(_X)"
+msgstr "다음 찾기(_N)"
 
 #: src/yelp-window.c:1052
-#, fuzzy
 msgid "Find _Previous"
-msgstr "이전(_P)"
+msgstr "이전 찾기(_P)"
 
 #: src/yelp-window.c:1157
 #, c-format
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr ""
+msgstr "'%s' 파일에 필요한 변환 컨텍스트를 만들 수 없습니다. 이 형식을 지원하지 않을 것입니다."
 
 #: src/yelp-window.c:1187 src/yelp-window.c:1601 src/yelp-window.c:1668
 #, c-format
@@ -669,50 +637,42 @@ msgid ""
 "The section ‘%s’ does not exist in this document. If you were directed to "
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
-msgstr ""
+msgstr "이 문서에는 '%s' 섹션이 없습니다. 프로그램의 도움말 단추를 통해 이 섹션에 들어왔다면, 프로그램의 관리자에게 알려 주십시오."
 
 #: src/yelp-window.c:1302
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
-msgstr ""
+msgstr "'%s' 파일을 읽을 수 없습니다.  파일이 없거나, 파일을 읽을 권한이 없습니다."
 
 #: src/yelp-window.c:1336
 msgid "Loading..."
 msgstr "읽고 있습니다..."
 
 #. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
+#. * will show up in the "about" box
 #: src/yelp-window.c:2166
-#, fuzzy
 msgid "translator-credits"
 msgstr "차영호 <ganadist@mizi.com>"
 
 #: src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr ""
+msgstr "그놈 데스크탑 문서 보기 프로그램."
 
 #: src/yelp-xslt-pager.c:194
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr ""
+msgstr "'%s' 파일을 파싱할 수 없습니다. 파일이 없거나, 형식이 틀렸습니다."
 
-#: src/yelp-xslt-pager.c:215
+#: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
 #, c-format
 msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
-msgstr ""
-
-#: src/yelp-xslt-pager.c:228
-#, c-format
-msgid ""
-"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
-"is not a valid XSLT stylesheet."
-msgstr ""
+msgstr "'%s' 문서를 처리할 수 없습니다. '%s' 파일이 없거나, 올바른 XSLT 스타일시트가 아닙니다."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
@@ -750,9 +710,6 @@ msgstr "그놈에서 도움말을 봅니다"
 #~ msgid "Kernels"
 #~ msgstr "커널"
 
-#~ msgid "Multimedia Applications"
-#~ msgstr "멀티미디어 프로그램"
-
 #~ msgid "Office and Productivity Applications"
 #~ msgstr "사무 업무용 프로그램"
 
@@ -764,9 +721,6 @@ msgstr "그놈에서 도움말을 봅니다"
 
 #~ msgid "Utilities"
 #~ msgstr "유틸리티"
-
-#~ msgid "*"
-#~ msgstr "*"
 
 #~ msgid "Titlepage"
 #~ msgstr "제목 페이지"
@@ -816,26 +770,6 @@ msgstr "그놈에서 도움말을 봅니다"
 
 #~ msgid "Documents"
 #~ msgstr "문서"
-
-#, fuzzy
-#~ msgid "_Next Page"
-#~ msgstr "/이동(G)/다음 페이지(_N)"
-
-# 홑 따옴표 열기
-#~ msgid "&#8216;"
-#~ msgstr "&#8216;"
-
-# 홑 따옴표 닫기
-#~ msgid "&#8217;"
-#~ msgstr "&#8217;"
-
-# 쌍 따옴표 열기
-#~ msgid "&#8220;"
-#~ msgstr "&#8220;"
-
-# 쌍 따옴표 닫기
-#~ msgid "&#8221;"
-#~ msgstr "&#8221;"
 
 #~ msgid "About This Article"
 #~ msgstr "이 글에 대한 정보"
@@ -1019,24 +953,6 @@ msgstr "그놈에서 도움말을 봅니다"
 
 #~ msgid "The URI of the document to be processed"
 #~ msgstr "처리할 문서의 URI"
-
-#~ msgid "/Edit/Find Pre_vious"
-#~ msgstr "/편집(E)/이전 찾기(_V)"
-
-#~ msgid "/Go/_Back"
-#~ msgstr "/이동(G)/뒤로(_B)"
-
-#~ msgid "/Go/_Forward"
-#~ msgstr "/이동(G)/앞으로(_F)"
-
-#~ msgid "/Go/_Home"
-#~ msgstr "/이동(G)/홈(_H)"
-
-#~ msgid "/Go/"
-#~ msgstr "/이동(G)/"
-
-#~ msgid "/Go/_Contents"
-#~ msgstr "/이동(G)/차례(_C)"
 
 #~ msgid "A Help Browser for GNOME"
 #~ msgstr "그놈용 도움말 브라우저"
