--- a/po/et.po
+++ b/po/et.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-06 04:32+0100\n"
-"PO-Revision-Date: 2005-01-30 20:14+0200\n"
-"Last-Translator: Ivar SMolin <okul@linux.ee>\n"
+"PO-Revision-Date: 2005-02-02 18:01+0200\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -308,6 +308,8 @@ msgstr "Järjehoidja pealkirjaga <b>%s</b> on selle lehe jaoks juba olemas."
 #, c-format
 msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is not well-formed XML."
 msgstr ""
+"Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud XML vormingus."
 
 #: src/yelp-db-pager.c:486
 msgid "Unknown"
@@ -316,7 +318,7 @@ msgstr "Tundmatu"
 #: src/yelp-error.c:42
 #: src/yelp-error.c:58
 msgid "An unknown error occured"
-msgstr ""
+msgstr "Tundmatu viga"
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
@@ -344,12 +346,14 @@ msgstr "Dokumenti ei suudeta töödelda"
 
 #: src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr ""
+msgstr "Vea kohta puudub teave."
 
 #: src/yelp-io-channel.c:98
 #, c-format
 msgid "The file ‘%s’ could not be read and decoded. The file may be compressed in an unsupported format."
 msgstr ""
+"Faili ‘%s’ ei saa lugeda ja dekodeerida. Fail võib olla toetamata vormingus "
+"või pakitud."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -373,14 +377,16 @@ msgstr "Abi"
 #, c-format
 msgid "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is formatted incorrectly."
 msgstr ""
+"Faili ‘%s’ ei saa analüüsida.  Faili kas pole olemas või on see valesti "
+"vormindatud."
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
-msgstr "Dokumendi info"
+msgstr "Dokumendi teave"
 
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
-msgstr ""
+msgstr "Dokumendi YelpDocInfo struktuur"
 
 #. TRANSLATORS:
 #. blockquote elements.  Different languages use different opening
@@ -394,7 +400,7 @@ msgstr ""
 #. single quotes as your primary (outer) quotation marks, you should
 #: src/yelp-settings.c:149
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201C"
 
 #: src/yelp-toc-pager.c:268
 msgid "YelpTocPager: Pause count is negative."
@@ -403,22 +409,26 @@ msgstr "YelpTocPager: Pauside arv on negatiivne."
 #: src/yelp-toc-pager.c:491
 #, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "OMF faili '%s' laadimine ebaõnnestus."
+msgstr "Tõrge OMF faili '%s' laadimisel."
 
 #: src/yelp-toc-pager.c:680
 #, c-format
 msgid "Read man page for %s"
-msgstr ""
+msgstr "Loen manuaalilehte %s jaoks"
 
 #: src/yelp-toc-pager.c:765
 #, c-format
 msgid "The table of contents could not be loaded. The file ‘%s’ is either missing or is not well-formed XML."
 msgstr ""
+"Sisukorda ei saa laadida. Fail ‘%s’ on puudu või on see valesti vormindatud "
+"XML vormingus."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
 msgid "The table of contents could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
 msgstr ""
+"Sisukorda ei saa töödelda. Faili ‘%s’ on puudu või pole see korrenktne XSLT "
+"laaditabel."
 
 #: src/yelp-toc-pager.c:1024
 #: src/yelp-xslt-pager.c:365
@@ -484,7 +494,7 @@ msgstr "_Eelistused"
 
 #: src/yelp-window.c:351
 msgid "_Reload"
-msgstr ""
+msgstr "_Lae uuesti"
 
 #: src/yelp-window.c:357
 msgid "_Back"
@@ -553,13 +563,15 @@ msgstr "Abiteabe sirvija"
 #: src/yelp-window.c:697
 #: src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "Faili ressursiidentifikaator (URI) on vigane."
 
 #: src/yelp-window.c:709
 #: src/yelp-window.c:825
 #, c-format
 msgid "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an actual file."
 msgstr ""
+"Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult "
+"failile."
 
 #: src/yelp-window.c:786
 #: src/yelp-window.c:1124
@@ -574,6 +586,8 @@ msgstr "Käesolev versioon ei toeta GNU infolehti"
 #: src/yelp-window.c:806
 msgid "SGML documents are no longer supported. Please ask the author of the document to convert to XML."
 msgstr ""
+"SGML dokumendid ei ole enam toetatud. Palu autorit see dokument XML "
+"vormingusse ümber teisendada."
 
 #: src/yelp-window.c:1021
 msgid "Fin_d"
@@ -590,11 +604,15 @@ msgstr ""
 #, c-format
 msgid "The section ‘%s’ does not exist in this document. If you were directed to this section from a Help button in an application, please report this to the maintainers of that application."
 msgstr ""
+"Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia rakenduse "
+"Abiteabe nupult, siis palun teata sellest veast rakenduse hooldajatele."
 
 #: src/yelp-window.c:1286
 #, c-format
 msgid "The file ‘%s’ could not be read.  This file might be missing, or you might not have permissions to read it."
 msgstr ""
+"Faili ‘%s’ ei saa lugeda.  See võib mitte olemas olla või pole sul õigust "
+"seda lugeda." 
 
 #: src/yelp-window.c:1320
 msgid "Loading..."
@@ -604,11 +622,10 @@ msgstr "Laadimine..."
 #: src/yelp-window.c:2131
 msgid "translator-credits"
 msgstr ""
-"Tõlge eesti keelde:\n"
-"\tTõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
-"\tAllan Sims <allsi@eau.ee>, 2003.\n"
-"\tPriit Laes <amd@store20.com>, 2005.\n"
-"\tIvar Smolin <okul@linux.ee>, 2005.\n"
+"Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
+"Allan Sims <allsi@eau.ee>, 2003.\n"
+"Priit Laes <amd@store20.com>, 2005.\n"
+"Ivar Smolin <okul@linux.ee>, 2005.\n"
 "\n"
 "GNOME Translation Project Eesti meeskond.\n"
 "http://et-gnome.sourceforge.net\n"
@@ -622,12 +639,16 @@ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 #, c-format
 msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is improperly formatted."
 msgstr ""
+"Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud."
 
 #: src/yelp-xslt-pager.c:215
 #: src/yelp-xslt-pager.c:228
 #, c-format
 msgid "The document ‘%s’could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
 msgstr ""
+"Dokumenti ‘%s’ ei saa töödelda. Faili ‘%s’ on puudu või pole see korrenktne "
+"XSLT laaditabel."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
