--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2005-02-02  Priit Laes  <plaes@cvs.gnome.org>
 
+	* et.po: Translation updated.
+
+2005-02-02  Priit Laes  <plaes@cvs.gnome.org>
+
 	* et.po: Translation updated by Ivar Smolin.
 
 2005-02-02  Changwoo Ryu  <cwryu@debian.org>
