--- a/po/et.po
+++ b/po/et.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-06 04:32+0100\n"
-"PO-Revision-Date: 2005-02-02 18:01+0200\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"PO-Revision-Date: 2005-02-02 18:56+0300\n"
+"Last-Translator: Priit Laes <amd@tt.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -307,9 +307,7 @@ msgstr "Järjehoidja pealkirjaga <b>%s</b> on selle lehe jaoks juba olemas."
 #: src/yelp-db-pager.c:238
 #, c-format
 msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is not well-formed XML."
-msgstr ""
-"Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti "
-"vormindatud XML vormingus."
+msgstr "Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti vormindatud XML vormingus."
 
 #: src/yelp-db-pager.c:486
 msgid "Unknown"
@@ -351,9 +349,7 @@ msgstr "Vea kohta puudub teave."
 #: src/yelp-io-channel.c:98
 #, c-format
 msgid "The file ‘%s’ could not be read and decoded. The file may be compressed in an unsupported format."
-msgstr ""
-"Faili ‘%s’ ei saa lugeda ja dekodeerida. Fail võib olla toetamata vormingus "
-"või pakitud."
+msgstr "Faili ‘%s’ ei saa lugeda ja dekodeerida. Fail võib olla toetamata vormingus või pakitud."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -376,9 +372,7 @@ msgstr "Abi"
 #: src/yelp-man-pager.c:164
 #, c-format
 msgid "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is formatted incorrectly."
-msgstr ""
-"Faili ‘%s’ ei saa analüüsida.  Faili kas pole olemas või on see valesti "
-"vormindatud."
+msgstr "Faili ‘%s’ ei saa analüüsida.  Faili kas pole olemas või on see valesti vormindatud."
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
@@ -419,16 +413,12 @@ msgstr "Loen manuaalilehte %s jaoks"
 #: src/yelp-toc-pager.c:765
 #, c-format
 msgid "The table of contents could not be loaded. The file ‘%s’ is either missing or is not well-formed XML."
-msgstr ""
-"Sisukorda ei saa laadida. Fail ‘%s’ on puudu või on see valesti vormindatud "
-"XML vormingus."
+msgstr "Sisukorda ei saa laadida. Fail ‘%s’ on puudu või on see valesti vormindatud XML vormingus."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
 msgid "The table of contents could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
-msgstr ""
-"Sisukorda ei saa töödelda. Faili ‘%s’ on puudu või pole see korrenktne XSLT "
-"laaditabel."
+msgstr "Sisukorda ei saa töödelda. Faili ‘%s’ on puudu või pole see korrenktne XSLT laaditabel."
 
 #: src/yelp-toc-pager.c:1024
 #: src/yelp-xslt-pager.c:365
@@ -569,9 +559,7 @@ msgstr "Faili ressursiidentifikaator (URI) on vigane."
 #: src/yelp-window.c:825
 #, c-format
 msgid "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an actual file."
-msgstr ""
-"Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult "
-"failile."
+msgstr "Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult failile."
 
 #: src/yelp-window.c:786
 #: src/yelp-window.c:1124
@@ -585,9 +573,7 @@ msgstr "Käesolev versioon ei toeta GNU infolehti"
 
 #: src/yelp-window.c:806
 msgid "SGML documents are no longer supported. Please ask the author of the document to convert to XML."
-msgstr ""
-"SGML dokumendid ei ole enam toetatud. Palu autorit see dokument XML "
-"vormingusse ümber teisendada."
+msgstr "SGML dokumendid ei ole enam toetatud. Palu dokumendi autoril see dokument XML vormingusse ümber teisendada."
 
 #: src/yelp-window.c:1021
 msgid "Fin_d"
@@ -603,16 +589,12 @@ msgstr ""
 #: src/yelp-window.c:1652
 #, c-format
 msgid "The section ‘%s’ does not exist in this document. If you were directed to this section from a Help button in an application, please report this to the maintainers of that application."
-msgstr ""
-"Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia rakenduse "
-"Abiteabe nupult, siis palun teata sellest veast rakenduse hooldajatele."
+msgstr "Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia rakenduse Abiteabe nupult, siis palun teata sellest veast rakenduse hooldajatele."
 
 #: src/yelp-window.c:1286
 #, c-format
 msgid "The file ‘%s’ could not be read.  This file might be missing, or you might not have permissions to read it."
-msgstr ""
-"Faili ‘%s’ ei saa lugeda.  See võib mitte olemas olla või pole sul õigust "
-"seda lugeda." 
+msgstr "Faili ‘%s’ ei saa lugeda.  See võib mitte olemas olla või pole sul õigust "
 
 #: src/yelp-window.c:1320
 msgid "Loading..."
@@ -638,17 +620,13 @@ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 #: src/yelp-xslt-pager.c:194
 #, c-format
 msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is improperly formatted."
-msgstr ""
-"Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti "
-"vormindatud."
+msgstr "Faili ‘%s’ ei saa analüüsida. Seda kas pole olema või on see valesti vormindatud."
 
 #: src/yelp-xslt-pager.c:215
 #: src/yelp-xslt-pager.c:228
 #, c-format
 msgid "The document ‘%s’could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
-msgstr ""
-"Dokumenti ‘%s’ ei saa töödelda. Faili ‘%s’ on puudu või pole see korrenktne "
-"XSLT laaditabel."
+msgstr "Dokumenti ‘%s’ ei saa töödelda. Faili ‘%s’ on puudu või pole see korrektne XSLT laaditabel."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
