--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Davyd Madeley  <davyd@madeley.id.au>
+
+	* src/yelp-bookmarks.c: Add a missing t.
+
 2005-02-04  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/yelp-bookmarks.c: (bookmarks_read): Fix leak and remove
