--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation
+
 2005-02-04  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
