--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-02-04  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation
