--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+	
 2005-02-04  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
