--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-02-04  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
