--- a/po/da.po
+++ b/po/da.po
@@ -14,9 +14,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-04 19:52+0100\n"
+"POT-Creation-Date: 2005-02-04 23:17+0100\n"
 "PO-Revision-Date: 2005-02-04 20:10+0100\n"
-"Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
+"Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -329,18 +329,20 @@ msgstr "Et bogmærke med navnet <b>%s</b> eksisterer allerede for denne side."
 
 #: ../src/yelp-bookmarks.c:406
 msgid "Document Sections"
-msgstr "Dokumentsektioner"
+msgstr "Dokumentafsnit"
 
 #: ../src/yelp-db-pager.c:242
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
-msgstr "Filen ‘%s’ kunne ikke læses. Enten eksisterede filen ikke, eller den er ikke gyldigt XML."
+msgstr ""
+"Filen ‘%s’ kunne ikke læses. Enten eksisterede filen ikke, eller den er ikke "
+"gyldigt XML."
 
 #: ../src/yelp-db-pager.c:486
 msgid "Unknown Section"
-msgstr "Ukendt sektion"
+msgstr "Ukendt afsnit"
 
 #: ../src/yelp-error.c:42 ../src/yelp-error.c:58
 msgid "An unknown error occured"
@@ -352,7 +354,7 @@ msgstr "Kunne ikke indlæse dokument"
 
 #: ../src/yelp-error.c:48
 msgid "Could not load section"
-msgstr "Kunne ikke indlæse sektion"
+msgstr "Kunne ikke indlæse afsnit"
 
 #: ../src/yelp-error.c:50
 msgid "Could not read the table of contents"
@@ -368,7 +370,7 @@ msgstr "Kunne ikke læse dokument"
 
 #: ../src/yelp-error.c:56
 msgid "Could not process document"
-msgstr "Kunne ikke processere dokument"
+msgstr "Kunne ikke behandle dokument"
 
 #: ../src/yelp-error.c:66
 msgid "No information is available about the error."
@@ -379,7 +381,9 @@ msgstr "Ingen oplysninger tilgængelige om fejlen."
 msgid ""
 "The file ‘%s’ could not be read and decoded. The file may be compressed in "
 "an unsupported format."
-msgstr "Filen ‘%s’ kunne ikke læses og afkodes. Filen kan være komprimeret i et ikke-understøttet format."
+msgstr ""
+"Filen ‘%s’ kunne ikke læses og afkodes. Filen kan være komprimeret i et ikke-"
+"understøttet format."
 
 #: ../src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -403,7 +407,9 @@ msgstr "Hjælp"
 msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
-msgstr "Filen ‘%s’ kunne ikke læses. Enten eksisterede filen ikke, eller den er formateret forkert."
+msgstr ""
+"Filen ‘%s’ kunne ikke læses. Enten eksisterede filen ikke, eller den er "
+"formateret forkert."
 
 #: ../src/yelp-pager.c:120
 msgid "Document Information"
@@ -457,14 +463,18 @@ msgstr "Læs man-side for %s"
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
-msgstr "Indholdsfortegnelsen kunne ikke indlæses. Filen ‘%s’ enten mangler eller er ikke gyldigt XML."
+msgstr ""
+"Indholdsfortegnelsen kunne ikke indlæses. Filen ‘%s’ enten mangler eller er "
+"ikke gyldigt XML."
 
 #: ../src/yelp-toc-pager.c:878
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
-msgstr "Indholdsfortegnelsen kunne ikke processeres. Filen ‘%s’ enten mangler eller er ikke et gyldigt XSLT-stilark."
+msgstr ""
+"Indholdsfortegnelsen kunne ikke behandles. Filen ‘%s’ enten mangler eller er "
+"ikke et gyldigt XSLT-stilark."
 
 #: ../src/yelp-toc-pager.c:1029 ../src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
@@ -560,11 +570,11 @@ msgstr "Gå til listen med emner i hjælp"
 
 #: ../src/yelp-window.c:372
 msgid "_Previous Section"
-msgstr "_Forrige sektion"
+msgstr "_Forrige afsnit"
 
 #: ../src/yelp-window.c:377
 msgid "_Next Section"
-msgstr "_Næste sektion"
+msgstr "_Næste afsnit"
 
 #: ../src/yelp-window.c:382
 msgid "_Contents"
@@ -621,7 +631,9 @@ msgstr "GNU info-sider understøttes ikke i denne version."
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
-msgstr "SGML-dokumenter understøttes ikke længere. Bed venligst forfatteren af dokumentet om at konvertere det til XML."
+msgstr ""
+"SGML-dokumenter understøttes ikke længere. Bed venligst forfatteren af "
+"dokumentet om at konvertere det til XML."
 
 #: ../src/yelp-window.c:1024
 msgid "Find:"
@@ -640,7 +652,9 @@ msgstr "Find _forrige"
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr "En transformationskontekst kunne ikke oprettes for filen ‘%s’. Formatet understøttes muligvis ikke."
+msgstr ""
+"En transformationskontekst kunne ikke oprettes for filen ‘%s’. Formatet "
+"understøttes muligvis ikke."
 
 #: ../src/yelp-window.c:1187 ../src/yelp-window.c:1601
 #: ../src/yelp-window.c:1668
@@ -649,14 +663,19 @@ msgid ""
 "The section ‘%s’ does not exist in this document. If you were directed to "
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
-msgstr "Sektionen ‘%s’ eksisterer ikke i dette dokument. Hvis du blev dirigeret til denne sektion fra en \"Hjælp\"-knap i et program, så rapportér venligst dette til vedligeholderne af det program."
+msgstr ""
+"Afsnittet ‘%s’ eksisterer ikke i dette dokument. Hvis du blev dirigeret til "
+"dette afsnit fra en \"Hjælp\"-knap i et program, så rapportér venligst dette "
+"til vedligeholderne af det program."
 
 #: ../src/yelp-window.c:1302
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
-msgstr "Filen ‘%s’ kunne ikke læses. Filen kan mangle, eller du har måske ikke rettigheder til at læse den."
+msgstr ""
+"Filen ‘%s’ kunne ikke læses. Filen kan mangle, eller du har måske ikke "
+"rettigheder til at læse den."
 
 #: ../src/yelp-window.c:1336
 msgid "Loading..."
@@ -676,21 +695,25 @@ msgstr ""
 # skidt med "browser"-delen
 #: ../src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "En dokumentationsfremviser til Gnome-skrivebordet."
+msgstr "En dokumentationsfremviser til Gnome."
 
 #: ../src/yelp-xslt-pager.c:194
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr "Filen ‘%s’ kunne ikke læses. Enten eksisterer filen ikke, eller den er formateret forkert."
+msgstr ""
+"Filen ‘%s’ kunne ikke læses. Enten eksisterer filen ikke, eller den er "
+"formateret forkert."
 
 #: ../src/yelp-xslt-pager.c:215 ../src/yelp-xslt-pager.c:228
 #, c-format
 msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
-msgstr "Dokumentet ‘%s’  kunne ikke processeres. Filen ‘%s’ enten mangler eller er ikke et gyldigt XSLT-stilark."
+msgstr ""
+"Dokumentet ‘%s’  kunne ikke behandles. Filen ‘%s’ enten mangler eller er "
+"ikke et gyldigt XSLT-stilark."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
@@ -790,7 +813,7 @@ msgstr "Få hjælp til Gnome"
 #~ msgstr "Referencepunkt"
 
 #~ msgid "Reference Section"
-#~ msgstr "Referencesektion"
+#~ msgstr "Referenceafsnit"
 
 #~ msgid "Release Information"
 #~ msgstr "Frigivelsesoplysninger"
