--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-06  Pauli Virtanen <pauli.virtanen@hut.fi>
+
+	 * fi.po: Updated Finnish translation.
+
 2005-02-05  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
